--- a/src/main/resources/com/zst/autovermietung/kunde-add-screen.fxml
+++ b/src/main/resources/com/zst/autovermietung/kunde-add-screen.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ChoiceBox?>
 <?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextArea?>
@@ -52,11 +53,17 @@
       </Label>
       <DatePicker fx:id="geburtsdatumPicker" layoutX="37.0" layoutY="324.0" prefHeight="26.0" prefWidth="158.0" />
       <DatePicker fx:id="austellungsdatumPicker" layoutX="37.0" layoutY="400.0" prefHeight="26.0" prefWidth="158.0" />
-      <TextArea fx:id="adresseText" layoutX="219.0" layoutY="258.0" prefHeight="46.0" prefWidth="181.0" />
+      <TextArea fx:id="adresseText" layoutX="219.0" layoutY="258.0" prefHeight="0.0" prefWidth="182.0" />
       <TextField fx:id="telefonnummerText" layoutX="36.0" layoutY="258.0" />
       <TextField fx:id="nameText" layoutX="37.0" layoutY="182.0" />
       <TextField fx:id="nachnameText" layoutX="219.0" layoutY="182.0" />
       <TextField fx:id="trIDText" layoutX="37.0" layoutY="111.0" />
       <Button layoutX="323.0" layoutY="426.0" mnemonicParsing="false" text="hinzufügen" />
+      <ChoiceBox fx:id="geschlechtChoice" layoutX="220.0" layoutY="324.0" prefHeight="26.0" prefWidth="150.0" />
+      <Label layoutX="219.0" layoutY="304.0" text="Geschlecht">
+         <font>
+            <Font size="14.0" />
+         </font>
+      </Label>
    </children>
 </AnchorPane>
