--- a/src/main/resources/com/zst/autovermietung/mietvertrag-add-screen.fxml
+++ b/src/main/resources/com/zst/autovermietung/mietvertrag-add-screen.fxml
@@ -7,7 +7,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="352.0" prefWidth="437.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.zst.autovermietung.KundeAddScreenController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="352.0" prefWidth="437.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.zst.autovermietung.MietvertragAddScreenController">
    <children>
       <Label layoutX="88.0" layoutY="35.0" prefHeight="30.0" prefWidth="256.0" text="Neue Mietvertrag erstellen" textFill="#214565" AnchorPane.leftAnchor="88.0" AnchorPane.rightAnchor="93.0">
          <font>
@@ -42,7 +42,7 @@
       <DatePicker fx:id="geburtsdatumPicker" layoutX="37.0" layoutY="249.0" prefHeight="26.0" prefWidth="158.0" />
       <DatePicker fx:id="austellungsdatumPicker" layoutX="219.0" layoutY="249.0" prefHeight="26.0" prefWidth="158.0" />
       <Button layoutX="189.0" layoutY="306.0" mnemonicParsing="false" text="erstellen" />
-      <ChoiceBox layoutX="38.0" layoutY="111.0" prefHeight="26.0" prefWidth="170.0" />
-      <ChoiceBox layoutX="38.0" layoutY="182.0" prefHeight="26.0" prefWidth="170.0" />
+      <ChoiceBox fx:id="kundeChoice" layoutX="38.0" layoutY="111.0" prefHeight="26.0" prefWidth="170.0" />
+      <ChoiceBox fx:id="autoChoice" layoutX="38.0" layoutY="182.0" prefHeight="26.0" prefWidth="170.0" />
    </children>
 </AnchorPane>
