--- a/src/main/resources/com/zst/autovermietung/login-page.fxml
+++ b/src/main/resources/com/zst/autovermietung/login-page.fxml
@@ -17,13 +17,14 @@
          <font>
             <Font name="System Bold" size="12.0" />
          </font></Label>
-      <TextField fx:id="benutzernameText" layoutX="215.0" layoutY="165.0" prefHeight="26.0" prefWidth="141.0" />
-      <PasswordField fx:id="passwortText" layoutX="215.0" layoutY="200.0" prefHeight="26.0" prefWidth="142.0" />
+      <TextField fx:id="benutzernameText" layoutX="215.0" layoutY="165.0" prefHeight="26.0" prefWidth="141.0" promptText="Benutzername" />
+      <PasswordField fx:id="passwortText" layoutX="215.0" layoutY="200.0" prefHeight="26.0" prefWidth="142.0" promptText="Passwort" />
       <Label fx:id="loginTitle" layoutX="44.0" layoutY="83.0" text="AUTOVERMIETUNG-SYSTEM" textFill="#113fb4">
          <font>
             <Font name="System Bold" size="28.0" />
          </font>
       </Label>
       <Button fx:id="loginButton" layoutX="207.0" layoutY="268.0" mnemonicParsing="false" onAction="#login" text="Log in" />
+      <Label fx:id="messageLabel" alignment="CENTER" layoutX="1.0" layoutY="131.0" prefHeight="18.0" prefWidth="464.0" textAlignment="CENTER" />
    </children>
 </AnchorPane>
