--- a/src/main/resources/com/zst/autovermietung/auto-screen.fxml
+++ b/src/main/resources/com/zst/autovermietung/auto-screen.fxml
@@ -2,6 +2,7 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ListView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
@@ -18,5 +19,6 @@
          </font>
       </Label>
       <Button fx:id="autoAddButton" layoutX="24.0" layoutY="61.0" mnemonicParsing="false" onAction="#openAddScreen" text="neue Auto hinzufügen" />
+      <ListView layoutX="24.0" layoutY="132.0" prefHeight="298.0" prefWidth="642.0" />
    </children>
 </AnchorPane>
