--- a/src/main/resources/com/zst/autovermietung/first-home-screen.fxml
+++ b/src/main/resources/com/zst/autovermietung/first-home-screen.fxml
@@ -1,6 +1,63 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.chart.AreaChart?>
+<?import javafx.scene.chart.CategoryAxis?>
+<?import javafx.scene.chart.NumberAxis?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
 
-
-<AnchorPane fx:id="firstHomeScreen" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="451.0" prefWidth="690.0" style="-fx-background-color: #EAEFF3;" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.zst.autovermietung.FirstHomeScreenController" />
+<AnchorPane fx:id="firstHomeScreen" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="451.0" prefWidth="690.0" style="-fx-background-color: #EAEFF3;" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.zst.autovermietung.FirstHomeScreenController">
+   <children>
+      <ImageView fitHeight="58.0" fitWidth="172.0" layoutX="252.0" layoutY="14.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@images/5278232-car-logo-png-free-transparent-png-logos-car-logo-png-448_157_preview%20-%20Kopya.png" />
+         </image>
+      </ImageView>
+      <Label layoutX="91.0" layoutY="76.0" prefHeight="20.0" prefWidth="119.0" text="Anzahl von Autos">
+         <font>
+            <Font name="System Bold" size="14.0" />
+         </font>
+      </Label>
+      <Label layoutX="62.0" layoutY="269.0" prefHeight="20.0" prefWidth="202.0" text="Anzahl von verfügbaren Autos">
+         <font>
+            <Font name="System Bold" size="14.0" />
+         </font>
+      </Label>
+      <Label layoutX="434.0" layoutY="269.0" prefHeight="18.0" prefWidth="146.0" text="Anzahl von Kunden">
+         <font>
+            <Font name="System Bold" size="14.0" />
+         </font>
+      </Label>
+      <Label layoutX="126.0" layoutY="114.0" text="19" textFill="#1f30a3">
+         <font>
+            <Font size="45.0" />
+         </font>
+      </Label>
+      <Label layoutX="139.0" layoutY="304.0" text="7" textFill="#1f30a3">
+         <font>
+            <Font size="45.0" />
+         </font>
+      </Label>
+      <Label layoutX="473.0" layoutY="304.0" text="12" textFill="#1f30a3">
+         <font>
+            <Font size="45.0" />
+         </font>
+      </Label>
+      <Label layoutX="431.0" layoutY="76.0" prefHeight="20.0" prefWidth="153.0" text="Mietstatus (monatlich)">
+         <font>
+            <Font name="System Bold" size="14.0" />
+         </font>
+      </Label>
+      <AreaChart layoutX="396.0" layoutY="104.0" prefHeight="154.0" prefWidth="202.0">
+        <xAxis>
+          <CategoryAxis side="BOTTOM" />
+        </xAxis>
+        <yAxis>
+          <NumberAxis side="LEFT" />
+        </yAxis>
+      </AreaChart>
+   </children>
+</AnchorPane>
