--- a/src/main/resources/com/zst/autovermietung/mietvertrag-screen.fxml
+++ b/src/main/resources/com/zst/autovermietung/mietvertrag-screen.fxml
@@ -2,6 +2,7 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ListView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
@@ -12,7 +13,8 @@
             <Font size="18.0" />
          </font>
       </Label>
-      <Button fx:id="mietvertragAddButton" layoutX="34.0" layoutY="62.0" mnemonicParsing="false" onAction="#openAddScreen" prefHeight="55.0" prefWidth="162.0" text="neue Mietvertrag schließen" />
-      <Button layoutX="212.0" layoutY="62.0" mnemonicParsing="false" prefHeight="55.0" prefWidth="162.0" text="eine Mietvertrag löschen" />
+      <Button fx:id="mietvertragAddButton" layoutX="129.0" layoutY="62.0" mnemonicParsing="false" onAction="#openAddScreen" prefHeight="27.0" prefWidth="162.0" text="neue Mietvertrag schließen" />
+      <Button layoutX="388.0" layoutY="62.0" mnemonicParsing="false" prefHeight="27.0" prefWidth="162.0" text="eine Mietvertrag löschen" />
+      <ListView layoutX="34.0" layoutY="110.0" prefHeight="322.0" prefWidth="623.0" />
    </children>
 </AnchorPane>
