--- a/src/main/resources/com/zst/autovermietung/kunde-add-screen.fxml
+++ b/src/main/resources/com/zst/autovermietung/kunde-add-screen.fxml
@@ -57,8 +57,8 @@
       <TextField fx:id="telefonnummerText" layoutX="36.0" layoutY="258.0" />
       <TextField fx:id="nameText" layoutX="37.0" layoutY="182.0" />
       <TextField fx:id="nachnameText" layoutX="219.0" layoutY="182.0" />
-      <TextField fx:id="trIDText" layoutX="37.0" layoutY="111.0" />
-      <Button layoutX="323.0" layoutY="426.0" mnemonicParsing="false" text="hinzufügen" />
+      <TextField fx:id="trIdText" layoutX="37.0" layoutY="111.0" />
+      <Button layoutX="323.0" layoutY="426.0" mnemonicParsing="false" onAction="#addKundeButton" text="hinzufügen" />
       <ChoiceBox fx:id="geschlechtChoice" layoutX="220.0" layoutY="324.0" prefHeight="26.0" prefWidth="150.0" />
       <Label layoutX="219.0" layoutY="304.0" text="Geschlecht">
          <font>
