--- a/src/main/resources/com/zst/autovermietung/pop-up.fxml
+++ b/src/main/resources/com/zst/autovermietung/pop-up.fxml
@@ -6,7 +6,6 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="138.0" prefWidth="329.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.zst.autovermietung.PopUpController">
    <children>
       <Label layoutX="117.0" layoutY="25.0" text="WARNUNG!!" textFill="#df1515">
@@ -14,7 +13,7 @@
             <Font size="17.0" />
          </font>
       </Label>
-      <Label layoutX="21.0" layoutY="94.0" text="Dieser Kunde ist bereit im System gespeichert!">
+      <Label fx:id="messageLabel" alignment="CENTER" layoutX="-1.0" layoutY="94.0" prefHeight="20.0" prefWidth="329.0" text="Dieser Kunde ist bereit im System gespeichert!">
          <font>
             <Font size="14.0" />
          </font>
