--- a/src/main/resources/com/zst/autovermietung/kunde-screen.fxml
+++ b/src/main/resources/com/zst/autovermietung/kunde-screen.fxml
@@ -9,16 +9,15 @@
 
 <AnchorPane fx:id="kundeScreen" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="451.0" prefWidth="690.0" style="-fx-background-color: #EAEFF3;" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.zst.autovermietung.KundeScreenController">
    <children>
-      <Label layoutX="34.0" layoutY="24.0" text="Kunde-Verwaltung" textFill="#101861">
+      <Label layoutX="27.0" layoutY="21.0" text="Kunde-Verwaltung" textFill="#101861">
          <font>
             <Font size="18.0" />
          </font>
       </Label>
-      <Button fx:id="kundeAddButton" layoutX="126.0" layoutY="61.0" mnemonicParsing="false" onAction="#openAddScreen" prefHeight="27.0" prefWidth="149.0" text="neue Kunde hinzufügen" />
-      <Button layoutX="379.0" layoutY="61.0" mnemonicParsing="false" prefHeight="27.0" prefWidth="149.0" text="Kunde löschen" />
-      <ScrollPane layoutX="34.0" layoutY="106.0" prefHeight="330.0" prefWidth="630.0" AnchorPane.leftAnchor="30.0" AnchorPane.rightAnchor="30.0">
+      <Button fx:id="kundeAddButton" layoutX="285.0" layoutY="49.0" mnemonicParsing="false" onAction="#openAddScreen" prefHeight="27.0" prefWidth="149.0" text="neue Kunde hinzufügen" />
+      <ScrollPane layoutX="20.0" layoutY="99.0" prefHeight="330.0" prefWidth="650.0" AnchorPane.leftAnchor="20.0" AnchorPane.rightAnchor="20.0">
          <content>
-            <VBox fx:id="kundenList" prefHeight="327.0" prefWidth="626.0" />
+            <VBox fx:id="kundenList" fillWidth="false" prefHeight="327.0" prefWidth="638.0" />
          </content>
       </ScrollPane>
    </children>
