--- a/src/main/resources/com/zst/autovermietung/auto-add-screen.fxml
+++ b/src/main/resources/com/zst/autovermietung/auto-add-screen.fxml
@@ -14,48 +14,60 @@
             <Font name="System Bold" size="20.0" />
          </font>
       </Label>
-      <TextField layoutX="45.0" layoutY="106.0" prefHeight="26.0" prefWidth="150.0" />
+      <TextField fx:id="nummernschildField" layoutX="45.0" layoutY="106.0" prefHeight="26.0" prefWidth="150.0" />
       <Label layoutX="45.0" layoutY="86.0" text="Nummernschild">
          <font>
             <Font size="14.0" />
          </font>
       </Label>
-      <TextField layoutX="46.0" layoutY="292.0" prefHeight="26.0" prefWidth="150.0" />
+      <TextField fx:id="kmField" layoutX="46.0" layoutY="292.0" prefHeight="26.0" prefWidth="150.0" />
       <Label layoutX="47.0" layoutY="271.0" text="Kilometerstand">
          <font>
             <Font size="14.0" />
          </font>
       </Label>
-      <TextField layoutX="45.0" layoutY="170.0" prefHeight="26.0" prefWidth="150.0" />
+      <TextField fx:id="markeField" layoutX="45.0" layoutY="170.0" prefHeight="26.0" prefWidth="150.0" />
       <Label layoutX="45.0" layoutY="150.0" text="Marke">
          <font>
             <Font size="14.0" />
          </font>
       </Label>
-      <TextField layoutX="219.0" layoutY="170.0" prefHeight="26.0" prefWidth="150.0" />
+      <TextField fx:id="ModelField" layoutX="219.0" layoutY="170.0" prefHeight="26.0" prefWidth="150.0" />
       <Label layoutX="218.0" layoutY="150.0" text="Modell">
          <font>
             <Font size="14.0" />
          </font>
       </Label>
-      <TextField layoutX="46.0" layoutY="228.0" prefHeight="26.0" prefWidth="150.0" />
+      <TextField fx:id="farbeField" layoutX="46.0" layoutY="228.0" prefHeight="26.0" prefWidth="150.0" />
       <Label layoutX="46.0" layoutY="209.0" text="Farbe">
          <font>
             <Font size="14.0" />
          </font>
       </Label>
-      <TextField layoutX="219.0" layoutY="228.0" prefHeight="26.0" prefWidth="150.0" />
+      <TextField fx:id="jahrField" layoutX="219.0" layoutY="228.0" prefHeight="26.0" prefWidth="150.0" />
       <Label layoutX="217.0" layoutY="209.0" text="Baujahr">
          <font>
             <Font size="14.0" />
          </font>
       </Label>
-      <Button layoutX="294.0" layoutY="415.0" mnemonicParsing="false" text="hinzufügen" />
+      <Button layoutX="294.0" layoutY="415.0" mnemonicParsing="false" onAction="#autoAddButton" text="hinzufügen" />
       <Label layoutX="46.0" layoutY="332.0" text="ist verfügbar?">
          <font>
             <Font size="14.0" />
          </font>
       </Label>
       <ChoiceBox fx:id="verfugbarkeit" layoutX="45.0" layoutY="352.0" prefWidth="150.0" />
+      <TextField fx:id="mieteField" layoutX="219.0" layoutY="103.0" prefHeight="26.0" prefWidth="150.0" />
+      <Label layoutX="218.0" layoutY="82.0" text="Mietpreis">
+         <font>
+            <Font size="14.0" />
+         </font>
+      </Label>
+      <TextField fx:id="getriebetypField" layoutX="219.0" layoutY="292.0" prefHeight="26.0" prefWidth="150.0" />
+      <Label layoutX="217.0" layoutY="271.0" text="Getriebetyp">
+         <font>
+            <Font size="14.0" />
+         </font>
+      </Label>
    </children>
 </AnchorPane>
