--- a/src/main/resources/com/zst/autovermietung/auto-screen.fxml
+++ b/src/main/resources/com/zst/autovermietung/auto-screen.fxml
@@ -2,8 +2,10 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.ListView?>
+<?import javafx.scene.control.ScrollPane?>
+<?import javafx.scene.effect.Blend?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="451.0" prefWidth="690.0" style="-fx-background-color: #EAEFF3;" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.zst.autovermietung.AutoScreenController">
@@ -13,12 +15,14 @@
             <Font size="18.0" />
          </font>
       </Label>
-      <Label layoutX="24.0" layoutY="103.0" text="Autos" textFill="#101861">
-         <font>
-            <Font size="14.0" />
-         </font>
-      </Label>
       <Button fx:id="autoAddButton" layoutX="24.0" layoutY="61.0" mnemonicParsing="false" onAction="#openAddScreen" text="neue Auto hinzufügen" />
-      <ListView layoutX="24.0" layoutY="132.0" prefHeight="298.0" prefWidth="642.0" />
+      <ScrollPane layoutX="25.0" layoutY="106.0" prefHeight="330.0" prefWidth="639.0">
+         <content>
+            <VBox fx:id="autoList" fillWidth="false" prefHeight="326.0" prefWidth="636.0" />
+         </content>
+         <effect>
+            <Blend />
+         </effect>
+      </ScrollPane>
    </children>
 </AnchorPane>
