--- a/src/main/resources/com/zst/autovermietung/mietvertrag-screen.fxml
+++ b/src/main/resources/com/zst/autovermietung/mietvertrag-screen.fxml
@@ -2,8 +2,9 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.ListView?>
+<?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
 <AnchorPane fx:id="rechnungScreen" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="451.0" prefWidth="690.0" style="-fx-background-color: #EAEFF3;" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.zst.autovermietung.MietvertragScreenController">
@@ -15,6 +16,10 @@
       </Label>
       <Button fx:id="mietvertragAddButton" layoutX="129.0" layoutY="62.0" mnemonicParsing="false" onAction="#openAddScreen" prefHeight="27.0" prefWidth="162.0" text="neue Mietvertrag schließen" />
       <Button layoutX="388.0" layoutY="62.0" mnemonicParsing="false" prefHeight="27.0" prefWidth="162.0" text="eine Mietvertrag löschen" />
-      <ListView layoutX="34.0" layoutY="110.0" prefHeight="322.0" prefWidth="623.0" />
+      <ScrollPane layoutX="25.0" layoutY="106.0" prefHeight="330.0" prefWidth="639.0">
+         <content>
+            <VBox fx:id="kundenList" fillWidth="false" prefHeight="326.0" prefWidth="636.0" />
+         </content>
+      </ScrollPane>
    </children>
 </AnchorPane>
