--- a/src/main/resources/com/zst/autovermietung/mietvertrag-screen.fxml
+++ b/src/main/resources/com/zst/autovermietung/mietvertrag-screen.fxml
@@ -18,7 +18,7 @@
       <Button layoutX="388.0" layoutY="62.0" mnemonicParsing="false" prefHeight="27.0" prefWidth="162.0" text="eine Mietvertrag löschen" />
       <ScrollPane layoutX="25.0" layoutY="106.0" prefHeight="330.0" prefWidth="639.0">
          <content>
-            <VBox fx:id="kundenList" fillWidth="false" prefHeight="326.0" prefWidth="636.0" />
+            <VBox fx:id="mietvertragList" fillWidth="false" prefHeight="326.0" prefWidth="636.0" />
          </content>
       </ScrollPane>
    </children>
