--- a/src/main/resources/com/zst/autovermietung/mietvertrag-edit.fxml
+++ b/src/main/resources/com/zst/autovermietung/mietvertrag-edit.fxml
@@ -1,13 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ChoiceBox?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextArea?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane fx:id="pane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="324.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.zst.autovermietung.MietvertragDetailsItemController">
+<AnchorPane fx:id="pane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="450.0" prefWidth="324.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.zst.autovermietung.MietvertragEditController">
    <children>
       <Label alignment="CENTER" layoutY="22.0" prefHeight="22.0" prefWidth="324.0" text="Vertrag-ID:">
          <font>
@@ -44,17 +46,17 @@
             <Font name="System Bold" size="13.0" />
          </font>
       </Label>
-      <Label alignment="CENTER_RIGHT" layoutY="197.0" prefHeight="19.0" prefWidth="162.0" text="ist Bezahlt?:" wrapText="true">
+      <Label alignment="CENTER_RIGHT" layoutY="206.0" prefHeight="19.0" prefWidth="162.0" text="ist Bezahlt?:" wrapText="true">
          <font>
             <Font name="System Bold" size="13.0" />
          </font>
       </Label>
-      <Label alignment="CENTER_RIGHT" layoutY="216.0" prefHeight="19.0" prefWidth="162.0" text="Startdatum von Miete:" wrapText="true">
+      <Label alignment="CENTER_RIGHT" layoutY="238.0" prefHeight="19.0" prefWidth="162.0" text="Startdatum von Miete:" wrapText="true">
          <font>
             <Font name="System Bold" size="13.0" />
          </font>
       </Label>
-      <Label alignment="CENTER_RIGHT" layoutY="235.0" prefHeight="19.0" prefWidth="162.0" text="Enddatum von Miete:" wrapText="true">
+      <Label alignment="CENTER_RIGHT" layoutY="257.0" prefHeight="19.0" prefWidth="162.0" text="Enddatum von Miete:" wrapText="true">
          <font>
             <Font name="System Bold" size="13.0" />
          </font>
@@ -64,49 +66,40 @@
       <Label fx:id="nsLabel" layoutX="168.0" layoutY="119.0" prefHeight="18.0" prefWidth="156.0" text="Label" wrapText="true" />
       <Label fx:id="markemodelljahrLabel" layoutX="168.0" layoutY="138.0" prefHeight="40.0" prefWidth="156.0" text="mmj" wrapText="true" />
       <Label fx:id="mieteLabel" layoutX="168.0" layoutY="178.0" prefHeight="18.0" prefWidth="156.0" text="Label" wrapText="true" />
-      <Label fx:id="istBezahltLabel" layoutX="168.0" layoutY="197.0" prefHeight="18.0" prefWidth="156.0" text="Label" wrapText="true" />
-      <Label fx:id="sdatumLabel" layoutX="168.0" layoutY="216.0" prefHeight="18.0" prefWidth="156.0" text="Label" wrapText="true" />
-      <Label fx:id="edatumLabel" layoutX="168.0" layoutY="235.0" prefHeight="18.0" prefWidth="156.0" text="Label" wrapText="true" />
-      <Label fx:id="problemLabel" layoutX="168.0" layoutY="254.0" prefHeight="18.0" prefWidth="156.0" text="Label" wrapText="true" />
-      <Label alignment="CENTER_RIGHT" layoutY="253.0" prefHeight="19.0" prefWidth="162.0" text="Problembezeichnung:" wrapText="true">
+      <Label fx:id="sdatumLabel" layoutX="168.0" layoutY="238.0" prefHeight="18.0" prefWidth="156.0" text="Label" wrapText="true" />
+      <Label fx:id="edatumLabel" layoutX="168.0" layoutY="257.0" prefHeight="18.0" prefWidth="156.0" text="Label" wrapText="true" />
+      <Label alignment="CENTER_RIGHT" layoutY="287.0" prefHeight="19.0" prefWidth="162.0" text="Problembezeichnung:" wrapText="true">
          <font>
             <Font name="System Bold" size="13.0" />
          </font>
       </Label>
-      <Label alignment="CENTER" contentDisplay="CENTER" layoutY="272.0" prefHeight="40.0" prefWidth="324.0" text="Verantwortliche Mitarbeiter:" textAlignment="RIGHT" wrapText="true">
+      <Label alignment="CENTER" contentDisplay="CENTER" layoutY="331.0" prefHeight="40.0" prefWidth="324.0" text="Verantwortliche Mitarbeiter:" textAlignment="RIGHT" wrapText="true">
          <font>
             <Font name="System Bold" size="13.0" />
          </font>
       </Label>
-      <Label alignment="CENTER_RIGHT" layoutY="302.0" prefHeight="19.0" prefWidth="162.0" text="ID:" wrapText="true">
+      <Label alignment="CENTER_RIGHT" layoutY="361.0" prefHeight="19.0" prefWidth="162.0" text="ID:" wrapText="true">
          <font>
             <Font name="System Bold" size="13.0" />
          </font>
       </Label>
-      <Label alignment="CENTER_RIGHT" layoutY="321.0" prefHeight="19.0" prefWidth="162.0" text="Name:" wrapText="true">
+      <Label alignment="CENTER_RIGHT" layoutY="380.0" prefHeight="19.0" prefWidth="162.0" text="Name:" wrapText="true">
          <font>
             <Font name="System Bold" size="13.0" />
          </font>
       </Label>
-      <Label fx:id="mitidLabel" layoutX="168.0" layoutY="302.0" prefHeight="18.0" prefWidth="156.0" text="Label" wrapText="true" />
-      <Label fx:id="mitnameLabel" layoutX="168.0" layoutY="321.0" prefHeight="18.0" prefWidth="156.0" text="Label" wrapText="true" />
-      <Button fx:id="removeVertrag" layoutX="117.0" layoutY="359.0" mnemonicParsing="false" onAction="#removeVertrag" prefHeight="26.0" prefWidth="0.0">
+      <Label fx:id="mitidLabel" layoutX="168.0" layoutY="361.0" prefHeight="18.0" prefWidth="156.0" text="Label" wrapText="true" />
+      <Label fx:id="mitnameLabel" layoutX="168.0" layoutY="380.0" prefHeight="18.0" prefWidth="156.0" text="Label" wrapText="true" />
+      <Button layoutX="145.0" layoutY="409.0" mnemonicParsing="false" onAction="#saveInfos" prefHeight="26.0" prefWidth="0.0">
          <graphic>
             <ImageView fitHeight="17.0" fitWidth="18.0" pickOnBounds="true" preserveRatio="true">
                <image>
-                  <Image url="@images/icons8-delete-48%20-%20Kopya.png" />
+                  <Image url="@images/save.png" />
                </image>
             </ImageView>
          </graphic>
       </Button>
-      <Button fx:id="editMietvertrag" layoutX="176.0" layoutY="359.0" mnemonicParsing="false" onAction="#editVertrag" prefHeight="26.0" prefWidth="0.0">
-         <graphic>
-            <ImageView fitHeight="32.0" fitWidth="18.0" pickOnBounds="true" preserveRatio="true">
-               <image>
-                  <Image url="@images/icons8-edit-48%20-%20Kopya.png" />
-               </image>
-            </ImageView>
-         </graphic>
-      </Button>
+      <ChoiceBox fx:id="istBezahltChoice" layoutX="168.0" layoutY="203.0" prefHeight="26.0" prefWidth="121.0" />
+      <TextArea fx:id="problemField" layoutX="167.0" layoutY="281.0" prefHeight="50.0" prefWidth="122.0" />
    </children>
 </AnchorPane>
