--- a/src/main/resources/com/zst/autovermietung/first-home-screen.fxml
+++ b/src/main/resources/com/zst/autovermietung/first-home-screen.fxml
@@ -13,7 +13,7 @@
    <children>
       <ImageView fitHeight="58.0" fitWidth="172.0" layoutX="252.0" layoutY="14.0" pickOnBounds="true" preserveRatio="true">
          <image>
-            <Image url="@images/5278232-car-logo-png-free-transparent-png-logos-car-logo-png-448_157_preview%20-%20Kopya.png" />
+            <Image url="@images/5278232-car-logo-png-free-transparent-png-logos-car-logo-png-448_157_preview - Kopya.png" />
          </image>
       </ImageView>
       <Label layoutX="91.0" layoutY="76.0" prefHeight="20.0" prefWidth="119.0" text="Anzahl von Autos">
