--- a/src/main/resources/com/zst/autovermietung/home-page.fxml
+++ b/src/main/resources/com/zst/autovermietung/home-page.fxml
@@ -17,14 +17,14 @@
             </Label>
          </children>
       </AnchorPane>
-      <AnchorPane fx:id="screen" layoutX="168.0" layoutY="128.0" prefHeight="378.0" prefWidth="690.0" style="-fx-background-color: #EAEFF3;" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="172.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="58.0" />
+      <AnchorPane fx:id="screen" layoutX="168.0" layoutY="128.0" prefHeight="451.0" prefWidth="686.0" style="-fx-background-color: #EAEFF3;" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="172.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="58.3" />
       <AnchorPane layoutY="46.0" prefHeight="463.0" prefWidth="172.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="58.0">
          <children>
             <Button fx:id="homepageButton" layoutX="46.0" layoutY="162.0" mnemonicParsing="false" onAction="#firstHomePage" style="-fx-background-color: #00000;" text="Homepage" AnchorPane.leftAnchor="48.4" AnchorPane.rightAnchor="48.4" />
             <Button fx:id="autosButton" layoutX="60.0" layoutY="206.0" mnemonicParsing="false" onAction="#autoVerwaltung" text="Autos" AnchorPane.leftAnchor="62.4" AnchorPane.rightAnchor="62.4" />
             <Button fx:id="kundenButton" layoutX="55.0" layoutY="293.0" mnemonicParsing="false" onAction="#kundeVerwaltung" text="Kunden" AnchorPane.leftAnchor="57.6" AnchorPane.rightAnchor="57.6" />
             <Button fx:id="mietvertragButton" layoutX="42.0" layoutY="252.0" mnemonicParsing="false" onAction="#mietvertragVerwaltung" prefHeight="26.0" prefWidth="87.0" text="Mietverträge" AnchorPane.leftAnchor="42.0" AnchorPane.rightAnchor="42.5" />
-            <Label alignment="CENTER" contentDisplay="CENTER" layoutX="30.0" layoutY="59.0" prefHeight="18.0" prefWidth="112.0" text="USER">
+            <Label fx:id="usernameLabel" alignment="CENTER" contentDisplay="CENTER" layoutX="30.0" layoutY="59.0" prefHeight="18.0" prefWidth="112.0" text="USER">
                <cursor>
                   <Cursor fx:constant="NONE" />
                </cursor>
