--- a/src/main/resources/com/zst/autovermietung/pop-up.fxml
+++ b/src/main/resources/com/zst/autovermietung/pop-up.fxml
@@ -6,14 +6,14 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="138.0" prefWidth="329.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.zst.autovermietung.PopUpController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="156.0" prefWidth="329.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.zst.autovermietung.PopUpController">
    <children>
       <Label layoutX="117.0" layoutY="25.0" text="WARNUNG!!" textFill="#df1515">
          <font>
             <Font size="17.0" />
          </font>
       </Label>
-      <Label fx:id="messageLabel" alignment="CENTER" layoutX="-1.0" layoutY="94.0" prefHeight="20.0" prefWidth="329.0" text="Dieser Kunde ist bereit im System gespeichert!">
+      <Label fx:id="messageLabel" alignment="CENTER" layoutX="-1.0" layoutY="83.0" prefHeight="54.0" prefWidth="330.0" text="Dieser Kunde ist bereit im System gespeichert!" textAlignment="CENTER" wrapText="true">
          <font>
             <Font size="14.0" />
          </font>
