--- a/src/main/resources/com/zst/autovermietung/mietvertrag-screen.fxml
+++ b/src/main/resources/com/zst/autovermietung/mietvertrag-screen.fxml
@@ -15,7 +15,7 @@
          </font>
       </Label>
       <Button fx:id="mietvertragAddButton" layoutX="129.0" layoutY="62.0" mnemonicParsing="false" onAction="#openAddScreen" prefHeight="27.0" prefWidth="162.0" text="neue Mietvertrag schließen" />
-      <Button layoutX="388.0" layoutY="62.0" mnemonicParsing="false" prefHeight="27.0" prefWidth="162.0" text="eine Mietvertrag löschen" />
+      <Button layoutX="388.0" layoutY="62.0" mnemonicParsing="false" onAction="#abgelaufendeMietvertrage" prefHeight="27.0" prefWidth="162.0" text="abgelaufene Mietverträge" />
       <ScrollPane layoutX="25.0" layoutY="106.0" prefHeight="330.0" prefWidth="639.0">
          <content>
             <VBox fx:id="mietvertragList" fillWidth="false" prefHeight="326.0" prefWidth="636.0" />
