--- a/src/main/resources/com/zst/autovermietung/kunde-edit.fxml
+++ b/src/main/resources/com/zst/autovermietung/kunde-edit.fxml
@@ -28,7 +28,7 @@
             <TextArea fx:id="adresseField" prefHeight="70.0" prefWidth="148.0" />
          </children>
       </VBox>
-      <VBox layoutX="342.0" layoutY="46.0" prefHeight="110.0" prefWidth="155.0">
+      <VBox layoutX="342.0" layoutY="46.0" prefHeight="179.0" prefWidth="155.0">
          <children>
             <Label contentDisplay="CENTER" prefHeight="2.0" prefWidth="160.0" text="Datum von Fuhrerschein:">
                <font>
@@ -42,6 +42,12 @@
                </font>
             </Label>
             <TextField fx:id="vorstrafenField" prefHeight="26.0" prefWidth="130.0" />
+            <Label contentDisplay="CENTER" prefHeight="25.0" prefWidth="155.0" text="hat Auto?">
+               <font>
+                  <Font name="System Bold" size="13.0" />
+               </font>
+            </Label>
+            <Label fx:id="hatautoLabel" prefHeight="19.0" prefWidth="155.0" text="hatauto" wrapText="true" />
          </children>
       </VBox>
       <VBox layoutX="22.0" layoutY="40.0" prefHeight="238.0" prefWidth="148.0">
