Die Seiten wurden nach den Befugnissen des Mitarbeiters und des Managers bearbeitet. Möglichkeit zum Ändern des Passworts hinzugefügt.

--- a/src/main/resources/com/zst/autovermietung/auto-add-screen.fxml
+++ b/src/main/resources/com/zst/autovermietung/auto-add-screen.fxml
@@ -63,11 +63,11 @@
             <Font size="14.0" />
          </font>
       </Label>
-      <TextField fx:id="getriebetypField" layoutX="219.0" layoutY="292.0" prefHeight="26.0" prefWidth="150.0" />
       <Label layoutX="217.0" layoutY="271.0" text="Getriebetyp">
          <font>
             <Font size="14.0" />
          </font>
       </Label>
+      <ChoiceBox fx:id="getriebetypChoice" layoutX="219.0" layoutY="292.0" prefWidth="150.0" />
    </children>
 </AnchorPane>
