--- a/src/main/resources/com/zst/autovermietung/home-page.fxml
+++ b/src/main/resources/com/zst/autovermietung/home-page.fxml
@@ -3,6 +3,8 @@
 <?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
@@ -20,17 +22,42 @@
       <AnchorPane fx:id="screen" layoutX="168.0" layoutY="128.0" prefHeight="451.0" prefWidth="686.0" style="-fx-background-color: #EAEFF3;" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="172.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="58.3" />
       <AnchorPane layoutY="46.0" prefHeight="463.0" prefWidth="172.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="58.0">
          <children>
-            <Button fx:id="homepageButton" layoutX="46.0" layoutY="162.0" mnemonicParsing="false" onAction="#firstHomePage" style="-fx-background-color: #00000;" text="Homepage" AnchorPane.leftAnchor="48.4" AnchorPane.rightAnchor="48.4" />
-            <Button fx:id="autosButton" layoutX="60.0" layoutY="206.0" mnemonicParsing="false" onAction="#autoVerwaltung" text="Autos" AnchorPane.leftAnchor="62.4" AnchorPane.rightAnchor="62.4" />
-            <Button fx:id="kundenButton" layoutX="55.0" layoutY="293.0" mnemonicParsing="false" onAction="#kundeVerwaltung" text="Kunden" AnchorPane.leftAnchor="57.6" AnchorPane.rightAnchor="57.6" />
-            <Button fx:id="mietvertragButton" layoutX="42.0" layoutY="252.0" mnemonicParsing="false" onAction="#mietvertragVerwaltung" prefHeight="26.0" prefWidth="87.0" text="Mietverträge" AnchorPane.leftAnchor="42.0" AnchorPane.rightAnchor="42.5" />
-            <Label fx:id="usernameLabel" alignment="CENTER" contentDisplay="CENTER" layoutX="30.0" layoutY="59.0" prefHeight="18.0" prefWidth="112.0" text="USER">
+            <Button fx:id="homepageButton" layoutX="42.0" layoutY="163.0" mnemonicParsing="false" onAction="#firstHomePage" prefHeight="27.0" prefWidth="87.0" style="-fx-background-color: #00000;" text="Homepage" AnchorPane.leftAnchor="42.0" AnchorPane.rightAnchor="43.0">
+               <font>
+                  <Font size="13.0" />
+               </font></Button>
+            <Button fx:id="autosButton" layoutX="57.0" layoutY="212.0" mnemonicParsing="false" onAction="#autoVerwaltung" prefHeight="27.0" prefWidth="57.0" text="Autos" AnchorPane.leftAnchor="57.0" AnchorPane.rightAnchor="58.0">
+               <font>
+                  <Font size="13.0" />
+               </font></Button>
+            <Button fx:id="kundenButton" layoutX="49.0" layoutY="293.0" mnemonicParsing="false" onAction="#kundeVerwaltung" prefHeight="27.0" prefWidth="75.0" text="Kunden" AnchorPane.leftAnchor="49.0" AnchorPane.rightAnchor="48.0">
+               <font>
+                  <Font size="13.0" />
+               </font></Button>
+            <Button fx:id="mietvertragButton" layoutX="35.0" layoutY="253.0" mnemonicParsing="false" onAction="#mietvertragVerwaltung" prefHeight="27.0" prefWidth="100.0" text="Mietverträge" AnchorPane.leftAnchor="35.0" AnchorPane.rightAnchor="37.0">
+               <font>
+                  <Font size="13.0" />
+               </font></Button>
+            <Label fx:id="usernameLabel" alignment="CENTER" contentDisplay="CENTER" layoutX="2.0" layoutY="33.0" prefHeight="48.0" prefWidth="166.0" text="USER">
                <cursor>
                   <Cursor fx:constant="NONE" />
                </cursor>
+               <font>
+                  <Font size="18.0" />
+               </font>
             </Label>
-            <Button fx:id="logoutButton" layoutX="56.0" layoutY="403.0" mnemonicParsing="false" onAction="#logOut" text="Log out" AnchorPane.leftAnchor="57.2" AnchorPane.rightAnchor="57.2" />
-            <Button layoutX="42.0" layoutY="85.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="88.0" text="Ayarlar" />
+            <Button fx:id="logoutButton" layoutX="50.0" layoutY="403.0" mnemonicParsing="false" onAction="#logOut" prefHeight="27.0" prefWidth="65.0" text="Log out" AnchorPane.leftAnchor="50.0" AnchorPane.rightAnchor="57.0">
+               <font>
+                  <Font size="13.0" />
+               </font></Button>
+            <Button layoutX="48.0" layoutY="87.0" mnemonicParsing="false" onAction="#settingButton" prefHeight="27.0" prefWidth="75.0">
+               <graphic>
+                  <ImageView fitHeight="19.0" fitWidth="63.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@images/settings.png" />
+                     </image>
+                  </ImageView>
+               </graphic></Button>
          </children>
       </AnchorPane>
    </children>
