--- a/src/main/resources/com/zst/autovermietung/kunde-screen.fxml
+++ b/src/main/resources/com/zst/autovermietung/kunde-screen.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.CheckBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -14,11 +15,12 @@
             <Font size="18.0" />
          </font>
       </Label>
-      <Button fx:id="kundeAddButton" layoutX="285.0" layoutY="49.0" mnemonicParsing="false" onAction="#openAddScreen" prefHeight="27.0" prefWidth="149.0" text="neue Kunde hinzufügen" />
+      <Button fx:id="kundeAddButton" layoutX="26.0" layoutY="59.0" mnemonicParsing="false" onAction="#openAddScreen" prefHeight="27.0" prefWidth="149.0" text="neue Kunde hinzufügen" />
       <ScrollPane layoutX="26.0" layoutY="106.0" prefHeight="330.0" prefWidth="639.0" AnchorPane.leftAnchor="25.0" AnchorPane.rightAnchor="25.0">
          <content>
             <VBox fx:id="kundenList" fillWidth="false" prefHeight="327.0" prefWidth="638.0" />
          </content>
       </ScrollPane>
+      <CheckBox fx:id="checkbox" layoutX="529.0" layoutY="77.0" mnemonicParsing="false" onAction="#change" text="Kunde mit Vorstrafen" />
    </children>
 </AnchorPane>
